# github-star-network-monitoring

./: .gitignore  CONVENTIONS.md  README.md  main.py  pyproject.toml
auth/: github_oauth.py
docs/: development_tasks.md  implementation_plan.md  prd.md  uml.md
tests/: test_github_oauth.py
