[tool.poetry]
name = "github-star-network-monitoring"
version = "0.1.0"
description = ""
authors = ["Dennis Lyubyvy <dennis@curia.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.12"
flask = "^2.3.2"
pytest = "^7.3.1"
requests-oauthlib = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
